syntax = "proto3";
import "lots.proto";
// macd_sample
import "take_profit.proto";
import "trailing_stop.proto";
import "macd_open_level.proto";
import "mat_trend_period.proto";
// moving_avg
import "maximum_risk.proto";
import "decrease_factor.proto";
import "moving_period.proto";
import "moving_shift.proto";

message AlgorithmParameters{
    Lots lots = 1;
    // macd_sample
    // + lots
    TakeProfit take_profit = 3;
    TrailingStop trailing_stop = 4;
    MACDOpenLevel macd_open_level = 5;
    MATrendPeriod mat_trand_period = 6;
    // moving_average
    // + lots
    MaximumRisk maximum_risk = 3;
    DecreaseFactor decrease_factor = 4;
    MovingPeriod moving_period = 5;
    MovingShift moving_shift = 6;
}